Refactored our code.

--- a/bear.html
+++ b/bear.html
@@ -5,14 +5,14 @@
     </head>
     <body>
         <div class="container">
-            <div class="ear1"><div class="iear1"></div></div>
-            <div class="ear2"><div class="iear2"></div></div>
+            <div class="ear ear1"><div class="inner-ear inner-ear1"></div></div>
+            <div class="ear ear2"><div class="inner-ear inner-ear2"></div></div>
         </div>    
         </div>
         <div class="main">
-            <div class="eye">
-                <div class="eye1"></div>
-                <div class="eye2"></div>
+            <div class="">
+                <div class="eye eye1"></div>
+                <div class="eye eye2"></div>
             </div>
             <div class="mouth">   
                 <div class="nose"></div> 
